feat: PostgreSQL/Supabase support and configurable CORS for deployment
- Add PostgreSQL runtime driver; prod profile already targets it via DB_URL/DB_USER/DB_PASSWORD
- prod ddl-auto: validate -> none so Flyway owns the schema (avoids Hibernate Instant/timestamptz
  validation failure against TIMESTAMP columns on Postgres)
- CORS allowed origins now read from APP_CORS_ALLOWED_ORIGINS (comma-separated), defaulting to
  localhost for dev — lets the deployed frontend origin be whitelisted without a code change
- Rewrite V9 with ANSI INTERVAL syntax so the migration runs on both H2 (dev) and PostgreSQL (prod);
  the old DATEADD was H2-only
- Document Supabase session-pooler (5432) + sslmode=require requirements in application-prod.yml